--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -13,8 +13,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 15px;
     img {
       width: 100%;
+      max-width: 500px;
       overflow: hidden;
     }
   }
@@ -37,11 +39,20 @@
       align-items: center;
       justify-content: space-around;
 
-      input {
+      input,
+      textarea {
+        padding: 15px;
         width: 300px;
+        font-size: 14px;
+        outline: none;
+        border-radius: 10px;
+        box-shadow: 0 0 15px -8px black;
+        border: 1px solid black;
+      }
+
+      input {
         height: 30px;
         font-size: 14px;
-
         @include mobile {
           width: 200px;
           height: 20px;
@@ -50,29 +61,30 @@
       }
 
       textarea {
-        width: 300px;
         height: 200px;
-        font-size: 14px;
         @include mobile {
           width: 200px;
           height: 100px;
           margin-bottom: 10px;
-          
         }
       }
 
       button {
         width: 150px;
-        height: 30px;
+        height: 40px;
         color: white;
         background-color: crimson;
         border: none;
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
+        transition: background-color 0.5s ease;
 
         &:focus {
           outline: none;
+        }
+        &:hover {
+          background-color: rgb(253, 34, 78);
         }
       }
       span {
